Thu Oct 25 11:56:06 2001  Brian Gough  <bjg@network-theory.co.uk>

	* added a tolerance parameter for the line minimizations

Wed Oct 24 23:18:46 2001  Brian Gough  <bjg@network-theory.co.uk>

	* modified all routines to use a single minimiztion iteration,
 	instead of nested iterations for line and gradient search.

Thu Oct 18 22:56:52 2001  Brian Gough  <bjg@network-theory.co.uk>

	* renamed gsl_multimin_f_minimizer to gsl_multimin_fminimizer for
 	consistency with rest of the library

	* renamed gsl_multimin_fdf_minimizer to gsl_multimin_fdfminimizer
 	for consistency with rest of the library

Mon Oct  8 21:41:51 2001  Brian Gough  <bjg@network-theory.co.uk>

	* diff.c (gsl_multimin_diff): pass params argument using
 	GSL_MULTIMIN_FN_EVAL (3 occurrences)

Sun Jul 15 17:54:15 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fdfminimizer.c (gsl_multimin_fdf_minimizer_alloc): eliminated
 	use of interval type

Sat Apr 28 11:29:08 2001  Brian Gough  <bjg@network-theory.co.uk>

	* diff.c (gsl_multimin_diff): made indices unsigned

Mon Apr 23 13:22:31 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_multimin.h diff.c: made starting_point const throughout to
 	avoid compiler warnings

	* made internal functions static

	* gsl_multimin.h: added missing prototype for gsl_multimin_diff

Tue Apr 17 22:15:37 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_multimin.h: added missing prototype for gsl_multimin_compute_ep

Sun Feb 18 16:35:21 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fdfminimizer.c (gsl_multimin_fdf_minimizer_alloc): modified to
 	account for change in calling convection of
 	gsl_min_fminimizer_alloc

Fri May  5 16:08:34 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (test_fdf): fixed warning about "control reaches end of
 	non-void function" by changing test_fdf to return type void
 
Tue May  2 19:20:46 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): added return gsl_test_summary() to main, so that