@@ -1,3 +1,14 @@
+Sun Feb 10 21:57:36 2002  Brian Gough  <bjg@network-theory.co.uk>
+
+	* conjugate_pr.c (conjugate_pr_iterate): return error ENOPROG if
+ 	cannot find downward step
+
+	* conjugate_fr.c (conjugate_fr_iterate): return error ENOPROG if
+ 	cannot find downward step
+
+	* vector_bfgs.c (vector_bfgs_iterate): return error ENOPROG if
+ 	cannot find downward step
+
 Thu Oct 25 11:56:06 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* added a tolerance parameter for the line minimizations
